crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.BarChart.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
values: [{shape: [], names: null, buffer: {U8=[]}}]
color: [3161148927]
abscissa: [{shape: [0], names: null, buffer: {I64=[]}}]
widths: [1.0]
