crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Clear.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
is_recursive: [false]
